@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT([lib/crack.h])
-AM_INIT_AUTOMAKE(cracklib, 2.8pre1)
+AM_INIT_AUTOMAKE(cracklib, 2.8pre2)
 AM_CONFIG_HEADER(config.h)
 
 dnl Checks for programs.
